# queue-delay-app

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: autoscaling.rs  consumer.rs  delay.rs  delete.rs  main.rs  message_handler.rs  processor.rs  publish.rs  queue.rs  util.rs  visibility.rs
