
[package]
name = "queue-delay-app"
version = "0.1.0"
authors = ["insanitybit <insanitybit@gmail.com>"]

[dependencies]
base64 = "~0.6.*"
hyper = "0.10.*"
lru_time_cache = "0.6.*"
rusoto_credential = {version = "0.7.0"}
rusoto_core = {version = "0.25.0"}
rusoto_sqs = {version = "0.25.0"}
rusoto_sns = {version = "0.25.0"}
serde_json = "1.*"
serde_derive = "1.*"
serde = "1.*"
sqs-service-helper = {path = "../sqs-service-helper/"}
two-lock-queue = "0.1.*"
uuid = { version = "0.5", features = ["v4"] }

slog-term = "2.0.2"
slog-json = "2.0.*"
tokio-core = "0.1.*"

[dependencies.slog]
version = "2"
#features = ["max_level_error", "release_max_level_error"]

[features]
default = []